2014-08-08  Holger Seelig  <holger.seelig@yahoo.de>

	* MagicImport.cpp:
	* X3DBrowserEditor.cpp: 

2014-08-08  Holger Seelig  <holger.seelig@yahoo.de>

	* DirectionTool.h:
	* SFColorButton.h:
	* X3DSpotLightEditor.h:
	* X3DSpotLightEditor.cpp:
	* SFColorRGBAButton.h:
	* X3DFieldAdjustment.h:
	* X3DFieldAdjustment2.h:
	* X3DFieldAdjustment3.h:
	* SFStringComboBoxText.h:
	* X3DFieldToggleButton.h:
	* X3DDirectionalLightEditor.h:
	* X3DDirectionalLightEditor.cpp: 

2014-08-07  Holger Seelig  <holger.seelig@yahoo.de>

	* DirectionTool.h: 

2014-08-07  Holger Seelig  <holger.seelig@yahoo.de>

	* DirectionTool.h:
	* LightEditor.xml:
	* X3DSpotLightEditor.h:
	* X3DSpotLightEditor.cpp:
	* DirectionTool.x3dv:
	* X3DDirectionalLightEditor.h:
	* X3DLightEditorInterface.h:
	* NodePropertiesEditor.xml:
	* X3DDirectionalLightEditor.cpp:
	* X3DLightEditorInterface.cpp:
	* NodePropertiesEditor.h:
	* NodePropertiesEditor.cpp:
	* X3DNodePropertiesEditorInterface.h:
	* X3DNodePropertiesEditorInterface.cpp: 

2014-08-07  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* LightEditor.h:
	* BrowserWindow.xml:
	* LightEditor.cpp:
	* X3DSpotLightEditor.h:
	* LightEditor.xml:
	* X3DSpotLightEditor.cpp:
	* X3DPointLightEditor.cpp:
	* X3DLightEditorInterface.h:
	* X3DDirectionalLightEditor.cpp:
	* X3DLightEditorInterface.cpp: 

2014-08-07  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* ComposedWidgets.h:
	* LightEditor.h:
	* BrowserWindow.xml:
	* LightEditor.cpp:
	* MaterialEditor.h:
	* LightEditor.xml:
	* X3DPointLightEditor.h:
	* X3DPointLightEditor.cpp:
	* X3DFieldAdjustment3.h:
	* X3DDirectionalLightEditor.h:
	* X3DLightEditorInterface.h:
	* X3DDirectionalLightEditor.cpp:
	* X3DLightEditorInterface.cpp: 

2014-08-07  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl:
	* titania:
	* Makefile.am:
	* BrowserWindow.h:
	* LightEditor.h:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* LightEditor.cpp:
	* LightEditor.xml: