@@ -1,5 +1,10 @@
 2014-08-08  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DTexture2DNodeEditor.cpp:
+	* TextureEditorPreview.x3dv: 
+
+2014-08-08  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* MagicImport.cpp:
 	* X3DBrowserEditor.cpp: 
 
